# ProxyIA

./: .env.test  BENCHMARK_PROXYIA.md  Cargo.toml  Dockerfile  GEMINI.md  LICENSE  PENDIENTES.md  README.md  benchmark_report.ps1  build_and_deploy.bat  enriquecer_crm.bat  index_app2.txt  index_crm.txt  index_crm_sub.txt  map_crm.txt  map_crm2.txt  proxyia_launcher.bat  proxyia_mcp_wrapper.cmd
src/: db.rs  embeddings.rs  exporter.rs  llm.rs  local_embed.rs  main.rs  main.rs.bak  positional.rs  scanner.rs  search.rs  watcher.rs
